--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <section class="hero-section flex flex-col items-center justify-center py-16">
         <h1 class="text-4xl font-bold mb-4">4G VIỆT QUALITI</h1>
         <p class="text-center text-xl mb-8">Chào mừng bạn đến với dịch vụ 4G VPN chất lượng cao!</p>
-        <a href="packages.html" class="cta-button">Mua gói ngay</a>
+        <a href="mua-goi.html" class="cta-button">Mua gói ngay</a>
     </section>
 
     <!-- Features Section -->
