--- a/goi-nen.html
+++ b/goi-nen.html
@@ -62,6 +62,7 @@
         <a href="goi-nen.html" class="text-blue-500 hover:text-blue-700">Gói Nền</a>
         <a href="lay-link.html" class="text-gray-700 hover:text-blue-500">Link Mạng</a>
         <a href="huong-dan.html" class="text-gray-700 hover:text-blue-500">Hướng Dẫn</a>
+        <a href="dv-khac.html" class="text-gray-700 hover:text-blue-500">Dịch Vụ Khác</a>
     </nav>
 
     <!-- Main Content (Trang Gói Nền) -->
