--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>4G Việt Qualiti - Trang chủ</title>
+    <title>4G Việt Qualiti</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
@@ -68,13 +68,14 @@
         <a href="goi-nen.html" class="text-gray-700 hover:text-blue-500">Gói Nền</a>
         <a href="lay-link.html" class="text-gray-700 hover:text-blue-500">Link Mạng</a>
         <a href="huong-dan.html" class="text-gray-700 hover:text-blue-500">Hướng Dẫn</a>
+        <a href="dv-khac.html" class="text-gray-700 hover:text-blue-500">Dịch Vụ Khác</a>
     </nav>
 
     <!-- Hero Section -->
     <section class="hero-section flex flex-col items-center justify-center py-16">
         <h1 class="text-4xl font-bold mb-4">4G VIỆT QUALITI</h1>
         <p class="text-center text-xl mb-8">Chào mừng bạn đến với dịch vụ 4G VPN chất lượng cao!</p>
-        <a href="mua-goi.html" class="cta-button">Mua gói ngay</a>
+        <a href="packages.html" class="cta-button">Mua gói ngay</a>
     </section>
 
     <!-- Features Section -->
