--- a/dv-khac.html
+++ b/dv-khac.html
@@ -103,7 +103,7 @@
     <!-- Navigation -->
     <nav class="flex justify-center space-x-8 p-4 border-b">
         <a href="index.html" class="text-gray-700 hover:text-blue-500">Trang chủ</a>
-        <a href="mua-goi.html" class="text-gray-700 hover:text-blue-500">Dịch vụ khác</a>
+        <a href="mua-goi.html" class="text-gray-700 hover:text-blue-500">Gói Cước VPN</a>
         <a href="goi-nen.html" class="text-gray-700 hover:text-blue-500">Gói Nền</a>
         <a href="lay-link.html" class="text-gray-700 hover:text-blue-500">Link Mạng</a>
         <a href="huong-dan.html" class="text-gray-700 hover:text-blue-500">Hướng Dẫn</a>
