--- a/dv-khac.html
+++ b/dv-khac.html
@@ -127,7 +127,7 @@
             <p class="font-bold">Chủ tài khoản: NONG TRIEU THAI</p>
             <p class="mb-4">Nội dung chuyển khoản: <span id="paymentContent" class="font-bold"></span></p>
             <p class="font-bold">Số tiền: <span id="paymentAmount" class="font-bold"></span></p>
-            <img src="images/anhqr.jpg" alt="QR Code" class="mx-auto mb-4">
+            <img src="anhqr.jpg" alt="QR Code" class="mx-auto mb-4">
             <p>Xin cảm ơn!</p>
             <!-- Nút liên hệ Zalo -->
             <a href="https://zalo.me/0389293178" class="zalo-button" target="_blank">
